1. Resized card to fix two rows in screen 2. Edit and create group navigate to edit page correctly and also added functionality to come back from edit page 3. Add/Edit group page 3.1 Added file upload with preview 3.2 Resize image code added, but not tested with blob service 3.3 validation and reset of groups 3.4 Alignment to fit to both big and small/mobile screen

--- a/wwwroot/src/components/groups/display/groups-display-styles.css
+++ b/wwwroot/src/components/groups/display/groups-display-styles.css
@@ -1,12 +1,12 @@
 
 paper-card {
-    height: 430px;
+    height: 355px;
     margin: 10px;
     width: 300px;
     background-color: lightblue;
     vertical-align: top;
     --paper-card-header-image: {
-        height: 150px;
+        height: 140px;
     }
 }
 paper-card:hover {
@@ -47,6 +47,18 @@ a.link-events:hover {
     text-decoration: underline;
     color: darkslategray;
 }
+
+a.link-create {
+    text-decoration: none;
+    color: var(--paper-blue-a200);
+    ;
+}
+            
+a.link-create:hover {
+    text-decoration: underline;
+    color: #41B4F1;
+}
+
 
 .card-footer {
     text-align: right;
